--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="format-detection" content="telephone=no">
     <meta name="full-screen" content="yes">
     <meta name="x5-fullscreen" content="true">
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <title>project</title>
   </head>
   <body>
